--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1160,6 +1160,8 @@ header.header .header-navbar .search-close-icon img {
     font: normal normal normal 14px/1 FontAwesome;
     color: var(--applegreen);
     font-size: 30px;
+    position: relative;
+    left: 30px;
 }
 /***** Customer Review End *****/
 
@@ -1263,7 +1265,19 @@ header.header .header-navbar .search-close-icon img {
     color: var(--white);
     font-weight: 700;
     display: inline-block;
-    margin: 5px 0 0 0;
+    margin: 5px 0 0 30px;
+    position: relative;    
+}
+.contact-loaction .contact-information .info-bx a:before {
+    content: "";
+    position: absolute;
+    top: 7px;
+    left: -30px;
+    background: url('../assets/phone-white.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 16px;
+    height: 16px;
 }
 .contact-loaction .contact-information .info-bx a:hover {
     color: var(--applegreen);    
@@ -1614,6 +1628,9 @@ header.header .header-navbar .search-close-icon img {
     font-size: 18px;
     margin: 0 0 30px 0;
     display: inline-block;
+}
+.contact-us .ct-info a:hover {
+    color: var(--applegreen);
 }
 .contact-us .ct-info img {
     width: 20px;
@@ -2157,6 +2174,14 @@ header.header .header-navbar .search-close-icon img {
 .single-product .social-sharing li {
     display: inline-block;
 }
+.single-product .social-sharing li a {
+    transition: transform .8s ease-in-out;
+    display: inline-block;
+}
+.single-product .social-sharing li a:hover {
+    transform: rotate(360deg);
+}
+
 
 .single-product .grid__item.product__media-wrapper {
     -webkit-box-flex: 0;
